--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -1,6 +1,4 @@
-events {
-    worker_connections 1024;
-}
+events {}
 
 http {
     upstream client {
@@ -11,26 +9,23 @@ http {
         server server:8000;
     }
 
+    upstream monitoring {
+        server monitoring:9090;
+    }
+
     server {
         listen 80;
-        server_name localhost;
 
-        # Route pour le frontend
         location / {
-            proxy_pass http://client;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
+            proxy_pass http://client;  # Redirection vers le client
         }
 
-        # Route pour l'API backend
-        location /api {
-            proxy_pass http://server;
-            proxy_set_header Host $host;
+        location /api/ {
+            proxy_pass http://server;  # Redirection vers le serveur
         }
 
-        # Exemple pour Prometheus (monitoring)
-        location /metrics {
-            proxy_pass http://monitoring:9090;
+        location /monitoring/ {
+            proxy_pass http://monitoring;  # Redirection vers Prometheus/Grafana
         }
     }
 }
