--- a/Client/dockerfile.client
+++ b/Client/dockerfile.client
@@ -1,8 +1,17 @@
-FROM node:18-alpine
+FROM node:18-alpine as dev
 WORKDIR /app
-# Copie d'abord seulement les fichiers de dépendances
-COPY package.json package-lock.json ./
-RUN npm install
-# Puis copie le reste du code
+COPY package.json yarn.lock ./
+RUN yarn install --frozen-lockfile
 COPY . .
-CMD ["npm", "run", "dev"]
+CMD ["yarn", "dev"]
+
+FROM node:18-alpine as builder
+WORKDIR /app
+COPY package.json yarn.lock ./
+RUN yarn install --frozen-lockfile
+COPY . .
+RUN yarn build
+
+FROM nginx:alpine as prod
+COPY --from=builder /app/dist /usr/share/nginx/html
+EXPOSE 5173
