--- a/server/dockerfile.server
+++ b/server/dockerfile.server
@@ -1,11 +1,19 @@
 # dockerfile.server
-FROM python:3.9-slim
+FROM python:3.10-slim
 
 WORKDIR /app
 
-COPY requirements.txt .
-RUN pip install -r requirements.txt
+RUN apt-get update && apt-get install -y \
+    gcc \
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN pip install poetry
+
+COPY pyproject.toml poetry.lock ./
+
+RUN poetry install --no-root
 
 COPY . .
 
-CMD ["python", "app.py"]
+CMD ["poetry", "run", "python", "manage.py", "runserver", "0.0.0.0:8000"]
