--- a/server/dockerfile.server
+++ b/server/dockerfile.server
@@ -1,19 +1,38 @@
-# dockerfile.server
-FROM python:3.10-slim
+
+FROM python:3.13-slim as builder
 
 WORKDIR /app
+
 
 RUN apt-get update && apt-get install -y \
     gcc \
     libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
-RUN pip install poetry
+
+RUN pip install --no-cache-dir poetry
+
 
 COPY pyproject.toml poetry.lock ./
 
-RUN poetry install --no-root
+
+RUN poetry config virtualenvs.create false \
+    && poetry install --no-interaction --no-ansi --no-root
+
 
 COPY . .
 
-CMD ["poetry", "run", "python", "manage.py", "runserver", "0.0.0.0:8000"]
+
+RUN poetry install --no-interaction --no-ansi
+FROM python:3.13-slim
+
+WORKDIR /app
+
+COPY --from=builder /usr/local/lib/python3.13/site-packages /usr/local/lib/python3.13/site-packages
+COPY --from=builder /usr/local/bin /usr/local/bin
+COPY --from=builder /app /app
+
+ENV PYTHONUNBUFFERED=1 \
+    PYTHONPATH=/app
+
+CMD ["poetry", "run", "python", "server.py"]
