--- a/server/dockerfile.server
+++ b/server/dockerfile.server
@@ -1,38 +1,13 @@
-
-FROM python:3.13-slim as builder
-
-WORKDIR /app
-
-
-RUN apt-get update && apt-get install -y \
-    gcc \
-    libpq-dev \
-    && rm -rf /var/lib/apt/lists/*
-
-
-RUN pip install --no-cache-dir poetry
-
-
-COPY pyproject.toml poetry.lock ./
-
-
-RUN poetry config virtualenvs.create false \
-    && poetry install --no-interaction --no-ansi --no-root
-
-
-COPY . .
-
-
-RUN poetry install --no-interaction --no-ansi
 FROM python:3.13-slim
 
 WORKDIR /app
+RUN apt-get update \
+    && apt-get install -y build-essential gcc libpq-dev \
+    && pip install poetry==2.1.2 \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-COPY --from=builder /usr/local/lib/python3.13/site-packages /usr/local/lib/python3.13/site-packages
-COPY --from=builder /usr/local/bin /usr/local/bin
-COPY --from=builder /app /app
+COPY pyproject.toml poetry.lock ./
+ENV POETRY_VIRTUALENVS_CREATE=false
+RUN poetry install --no-interaction --no-ansi --no-root
 
-ENV PYTHONUNBUFFERED=1 \
-    PYTHONPATH=/app
-
-CMD ["poetry", "run", "python", "server.py"]
+COPY . .
