--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -3,17 +3,12 @@ name = "server"
 version = "0.1.0"
 description = ""
 authors = [
-    {name = "fankep",email = "108646@ecole-it.com"}
+    {name = "Your Name",email = "you@example.com"}
 ]
-readme = null
-requires-python = ">=3.13"
+readme = "README.md"
+requires-python = ">=3.11"
 dependencies = [
-    "django (>=5.2.1,<6.0.0)",
-    "djangorestframework (>=3.16.0,<4.0.0)",
-    "python-jose (>=3.4.0,<4.0.0)",
-    "authlib (>=1.6.0,<2.0.0)",
-    "psycopg2 (>=2.9.10,<3.0.0)",
-    "python-dotenv (>=1.1.0,<2.0.0)"
+    "django (>=5.2.1,<6.0.0)"
 ]
 
 
