--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -2,7 +2,7 @@ events {}
 
 http {
     upstream client {
-        server client:5173;
+        server client:80;  # car Nginx dans client expose sur 80 (pas 5173)
     }
 
     upstream server {
@@ -16,16 +16,31 @@ http {
     server {
         listen 80;
 
+        # Frontend (React/Vite build)
         location / {
-            proxy_pass http://client;  # Redirection vers le client
+            proxy_pass http://client;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
 
+        # API Backend
         location /api/ {
-            proxy_pass http://server;  # Redirection vers le serveur
+            proxy_pass http://server;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
 
+        # Monitoring (Grafana / Prometheus)
         location /monitoring/ {
-            proxy_pass http://monitoring;  # Redirection vers Prometheus/Grafana
+            proxy_pass http://monitoring;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
         }
     }
 }
