--- a/.env
+++ b/.env
@@ -1,10 +1,18 @@
-# Auth0 Configuration
-AUTH0_DOMAIN=dev-@texcocqw2nXUzm9j9f4E8xV.us.auth0.com
-AUTH0_CLIENT_ID=b3Rj15y8ir@texcqw2nXUzm9j9f4E8xV
-AUTH0_CLIENT_SECRET=EO263_cRuUBvsJTYXPm-TmmdelSyQa0b8z9lwgrTX7jsK7VLB
-AUTH0_AUDIENCE=https://api.f-train.com
+# --- Auth0 ---
+AUTH0_DOMAIN=dev-6knczocqqvl0i2dx.us.auth0.com
+AUTH0_CLIENT_ID=b3RjIydWr0twxcgw2nXUzm9j9PL4E8xV
+AUTH0_CLIENT_SECRET=ta_client_secret_ici
+AUTH0_AUDIENCE=https://fbrain-api
 
-# Database Configuration
+# --- PostgreSQL ---
 DB_USER=postgres
-DB_PASSWORD=complex_password_here
-DB_NAME=mydb
+DB_PASSWORD=ton_mot_de_passe_pg
+DB_NAME=fbrain_db
+
+# --- Backend API (optionnel) ---
+PORT=8000
+
+# --- URLs Frontend (callback/logout) ---
+# Modifie si tu déploies sur un vrai domaine
+VITE_AUTH0_CALLBACK_URL=http://localhost:5173/callback
+VITE_AUTH0_LOGOUT_URL=http://localhost:5173
