--- a/Client/dockerfile.client
+++ b/Client/dockerfile.client
@@ -1,19 +1,27 @@
-# Utilisation de base node + install des deps
-FROM node:18
+
+FROM node:18-alpine AS builder
 
 WORKDIR /app
 
-COPY package*.json ./
-RUN yarn install
+
+COPY package.json package-lock.json ./
+RUN npm install
+
 
 COPY . .
 
-# On reconstruit avec les variables d'env à disposition
-ENV VITE_AUTH0_DOMAIN=$VITE_AUTH0_DOMAIN
-ENV VITE_AUTH0_CLIENT_ID=$VITE_AUTH0_CLIENT_ID
-ENV VITE_AUTH0_CALLBACK_URL=$VITE_AUTH0_CALLBACK_URL
 
-RUN yarn build
+RUN npm run build
 
-EXPOSE 5173
-CMD ["yarn", "dev"]
+
+FROM nginx:alpine
+
+
+COPY --from=builder /app/dist /usr/share/nginx/html
+
+
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
