--- a/server/dockerfile.server
+++ b/server/dockerfile.server
@@ -1,13 +1,28 @@
 FROM python:3.13-slim
 
+
 WORKDIR /app
+
+
 RUN apt-get update \
-    && apt-get install -y build-essential gcc libpq-dev \
-    && pip install poetry==2.1.2 \
-    && apt-get clean && rm -rf /var/lib/apt/lists/*
+  && apt-get install -y --no-install-recommends \
+    build-essential gcc libpq-dev curl \
+  && apt-get clean \
+  && rm -rf /var/lib/apt/lists/*
+
+
+RUN pip install poetry==2.1.2
+
+ENV POETRY_VIRTUALENVS_CREATE=false
 
 COPY pyproject.toml poetry.lock ./
-ENV POETRY_VIRTUALENVS_CREATE=false
+
 RUN poetry install --no-interaction --no-ansi --no-root
 
+
 COPY . .
+
+
+EXPOSE 8000
+
+CMD ["gunicorn", "core.wsgi:application", "--bind", "0.0.0.0:8000"]
