--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -3,14 +3,15 @@ name = "server"
 version = "0.1.0"
 description = ""
 authors = [
-    {name = "Your Name",email = "you@example.com"}
+    { name = "Your Name", email = "you@example.com" }
 ]
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "django (>=5.2.1,<6.0.0)"
+    "django >=5.2.1,<6.0.0",
+    "gunicorn",
+    "django-cors-headers"
 ]
-
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
