--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -2,7 +2,7 @@ events {}
 
 http {
     upstream client {
-        server client:5173;  # car Nginx dans client expose sur 80 (pas 5173)
+        server client:5173; 
     }
 
     upstream server {
