--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,12 +19,34 @@ services:
     depends_on:
       - server
 
+  client-dev:
+    build:
+      context: ./Client
+      dockerfile: dockerfile.devclient
+    ports:
+      - "5173:5173"
+    volumes:
+      - ./Client:/app
+      - /app/node_modules
+    environment:
+      - VITE_AUTH0_DOMAIN=${AUTH0_DOMAIN}
+      - VITE_AUTH0_CLIENT_ID=${AUTH0_CLIENT_ID}
+      - VITE_AUTH0_AUDIENCE=${VITE_AUTH0_AUDIENCE}
+      - VITE_API_URL=http://server:8000
+      - VITE_AUTH0_CALLBACK_URL=http://localhost:5173/callback
+      - VITE_AUTH0_LOGOUT_URL=http://localhost:5173
+    command: yarn dev --host
+    depends_on:
+      - server
+    networks:
+      - f_brain_network
+
   server:
     build:
-     context: ./server
-     dockerfile: dockerfile.server
+      context: ./server
+      dockerfile: dockerfile.server
     restart: unless-stopped
-    command: ["gunicorn", "fbrain.wsgi:application", "--bind", "0.0.0.0:8000"]
+    command: ["gunicorn", "server_config.wsgi:application", "--bind", "0.0.0.0:8000"]
     environment:
       - NODE_ENV=production
       - PORT=8000
@@ -77,6 +99,7 @@ services:
     depends_on:
       - server
       - db
+
   proxy:
     build:
       context: ./proxy
