--- a/.env
+++ b/.env
@@ -1,9 +1,13 @@
 # --- Auth0 ---
 VITE_AUTH0_DOMAIN=dev-6knczocqqvl0i2dx.us.auth0.com
 VITE_AUTH0_CLIENT_ID=b3RjIydWr0twxcgw2nXUzm9j9PL4E8xV
-VITE_AUTH0_CALLBACK_URL=http://localhost:5173/callback
-VITE_AUTH0_LOGOUT_URL=http://localhost:5173
+VITE_AUTH0_CALLBACK_URL=http://localhost:5174/callback
+VITE_AUTH0_LOGOUT_URL=http://localhost:5174
 
+AUTH0_DOMAIN=dev-6knczocqqvl0i2dx.us.auth0.com
+AUTH0_CLIENT_ID=b3RjIydWr0twxcgw2nXUzm9j9PL4E8xV
+AUTH0_AUDIENCE=http://localhost:8000/api
+AUTH0_CLIENT_SECRET=TA_SECRET_Ici
 
 # --- PostgreSQL ---
 DB_USER=postgres
@@ -11,6 +15,3 @@ DB_PASSWORD=ton_mot_de_passe_pg
 DB_NAME=fbrain_db
 
 PORT=8000
-
-VITE_AUTH0_CALLBACK_URL=http://localhost:5173/callback
-VITE_AUTH0_LOGOUT_URL=http://localhost:5173
